--- a/FlappyBird/index.html
+++ b/FlappyBird/index.html
@@ -49,11 +49,23 @@ $signPackage = $jssdk->GetSignPackage();
     wxInfo.nonceStr = '<?php echo $signPackage["nonceStr"];?>';
     wxInfo.signature = '<?php echo $signPackage["signature"];?>';
 
-    var version = "1.0.1";
+    // 游戏版本号，控制脚本缓存
+    var version = "1.1.4";
+
+    var _mtac = {};
+    (function() {
+        var mta = document.createElement("script");
+        mta.src = "http://pingjs.qq.com/h5/stats.js?v2.0.2";
+        mta.setAttribute("name", "MTAH5");
+        mta.setAttribute("sid", "500503129");
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(mta, s);
+    })();
+
     var loadScript = function (list, callback) {
         var loaded = 0;
         var loadNext = function () {
-            loadSingleScript(list[loaded] + "?v" + version, function () {
+            loadSingleScript(list[loaded] + "?v=" + version, function () {
                 loaded++;
                 if (loaded >= list.length) {
                     callback();
