--- a/FlappyBird/index.html
+++ b/FlappyBird/index.html
@@ -42,6 +42,7 @@ $signPackage = $jssdk->GetSignPackage();
          data-show-fps-style="x:0,y:0,size:12,textColor:0xffffff,bgAlpha:0.9">
     </div>
 <script>
+    var debug = true;
     var wxInfo = {};
     wxInfo.debug = false;
     wxInfo.appId = '<?php echo $signPackage["appId"];?>';
@@ -52,16 +53,19 @@ $signPackage = $jssdk->GetSignPackage();
     // 游戏版本号，控制脚本缓存
     var version = "1.1.4";
 
-    var _mtac = {};
-    (function() {
-        var mta = document.createElement("script");
-        mta.src = "http://pingjs.qq.com/h5/stats.js?v2.0.2";
-        mta.setAttribute("name", "MTAH5");
-        mta.setAttribute("sid", "500503129");
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(mta, s);
-    })();
-
+    if (!debug)
+    {
+        var _mtac = {};
+        (function() {
+            var mta = document.createElement("script");
+            mta.src = "http://pingjs.qq.com/h5/stats.js?v2.0.2";
+            mta.setAttribute("name", "MTAH5");
+            mta.setAttribute("sid", "500503129");
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(mta, s);
+        })();
+    }
+    
     var loadScript = function (list, callback) {
         var loaded = 0;
         var loadNext = function () {
