去掉个人信息，以后不再更新

--- a/FlappyBird/index.html
+++ b/FlappyBird/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>飞翔的小鸟</title>
+    <title>FlappyBird</title>
     <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="full-screen" content="true" />
@@ -57,7 +57,7 @@
             var mta = document.createElement("script");
             mta.src = "http://pingjs.qq.com/h5/stats.js?v2.0.2";
             mta.setAttribute("name", "MTAH5");
-            mta.setAttribute("sid", "500503129");
+            mta.setAttribute("sid", "替换为你申请的id");
             var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(mta, s);
         })();
